--- a/src/CompraProgramada.Api/appsettings.Development.json
+++ b/src/CompraProgramada.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=3307;Database=itau_corretora_db;Uid=root;Pwd=admin_password_123;"
   }
 }
